src/objects/Kenan_Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment_Reason__c</fullName>
        <label>Adjustment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Goodwill credit invoice Complaints</fullName>
                </value>
                <value>
                    <fullName>Goodwill credited disorder</fullName>
                </value>
                <value>
                    <fullName>Goodwill credit counseling</fullName>
                </value>
                <value>
                    <fullName>Goodwill credited Installation</fullName>
                </value>
                <value>
                    <fullName>Cancellation / Termination</fullName>
                </value>
                <value>
                    <fullName>False entry in the system (correction)</fullName>
                </value>
                <value>
                    <fullName>Non provided SLA Entstֲfrist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>miscellaneous adjustment</fullName>
                </value>
                <value>
                    <fullName>adjustment against recurring charge</fullName>
                </value>
                <value>
                    <fullName>adjustment against non-recurring charge</fullName>
                </value>
                <value>
                    <fullName>adjustment against an adjustment</fullName>
                </value>
                <value>
                    <fullName>adjustment against nondistributed taxes</fullName>
                </value>
                <value>
                    <fullName>adjustment against usage charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APPROVE</fullName>
                </value>
                <value>
                    <fullName>DENY</fullName>
                </value>
                <value>
                    <fullName>CANCEL</fullName>
                </value>
                <value>
                    <fullName>In approval</fullName>
                </value>
                <value>
                    <fullName>requested</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>disputed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;   Invoice_Header__r.UM_Billing_Location__r.Id ,Invoice_Header__r.UM_Billing_Location__r.LG_BillingAccountNumber__c,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>UM_InvoiceHeader__c</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Item__c</fullName>
        <label>Invoice Item</label>
        <length>255</length>
        <referenceTo>InvoiceItem__x</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Open_Item__c</fullName>
        <label>Open Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice total</fullName>
                </value>
                <value>
                    <fullName>Cable Item</fullName>
                </value>
                <value>
                    <fullName>Internet Item</fullName>
                </value>
                <value>
                    <fullName>Leased Line Item</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Telephony Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_Affects_Balance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affects Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Original_Invoice_Number__c</fullName>
        <label>Original Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Received_from_Billing_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received from Billing System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Explicit amount</fullName>
                    <default>true</default>
                    <label>Explicit amount</label>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Date range</fullName>
                </value>
                <value>
                    <fullName>Units</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>accountExternalIdType__c</fullName>
        <label>accountExternalIdType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountExternalId__c</fullName>
        <label>accountExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billRefNo__c</fullName>
        <label>billRefNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billRefResets__c</fullName>
        <label>billRefResets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currencyCode__c</fullName>
        <label>Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fraudIndicator__c</fullName>
        <label>fraudIndicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primaryUnitsType__c</fullName>
        <label>primaryUnitsType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primaryUnits__c</fullName>
        <label>primaryUnits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requestStatus__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>disputed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>revRcvCostCtr__c</fullName>
        <label>revRcvCostCtr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendtoKenan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sendtoKenan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>trackingIdServ__c</fullName>
        <label>trackingIdServ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trackingId__c</fullName>
        <externalId>true</externalId>
        <label>trackingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Adjustment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Header__c</columns>
        <columns>UM_Original_Invoice_Number__c</columns>
        <columns>UM_Received_from_Billing_System__c</columns>
        <columns>trackingId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Adjustment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Kenan_Records_cannot_be_edited</fullName>
        <active>true</active>
        <description>You Cannot Edit the Adjustment Records Inserted from Kenan.</description>
        <errorConditionFormula>AND(NOT(ISNEW()), UM_Received_from_Billing_System__c ==True,  NOT($Setup.No_Validation__c.Flag__c))</errorConditionFormula>
        <errorMessage>Adjustment created directly in Billing cannot be modified.</errorMessage>
    </validationRules>
</CustomObject>